fixed mobile overflow, added scroll to top, refactored js

--- a/style.css
+++ b/style.css
@@ -366,6 +366,7 @@ p {
     }
 
     .mcart {
+        display:none;
         transform: translateX(341px);
         transition: all 225ms ease-in-out;
     }
